assets/css/styles.css
/*===========================
  Start Default CSS 
===========================*/
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cabin:wght@400;500;600;700&family=Montserrat:wght@100;300;400;700&display=swap');

:root {

    /* SCSS Color */
    --font: 'Cabin',
        sans-serif;
    --black: #111111ff;
    --white: #eeeeeeff;
    --gray: #5c6565ff;
    --green: #28a8a5ff;
    --orange: #ff5000ff;
    --blue: #0055f4ff;
    --pink: #e60c72;
    --background: #08131Cff;

    /* SCSS Gradient */
    --gradient-top: linear-gradient(0deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-right: linear-gradient(90deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-bottom: linear-gradient(180deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-left: linear-gradient(270deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-top-right: linear-gradient(45deg, #28a8a5ff, #0055f4ff);
    --gradient-bottom-right: linear-gradient(135deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-top-left: linear-gradient(225deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-bottom-left: linear-gradient(315deg, #111111ff, #eeeeeeff, #5c6565ff, #28a8a5ff, #ff5000ff, #0055f4ff);
    --gradient-radial: radial-gradient(#28A87Fff, #28A893ff, #28A8A5ff);
}

html::-webkit-scrollbar {
    width: 10px;
}

html::-webkit-scrollbar-track {
    border-radius: 8px;
    background-color: rgba(3, 11, 17, 0.5);
}

html::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(40, 168, 166, 0.4);
}

html::-webkit-scrollbar-thumb:hover {
    background-color: rgba(40, 168, 166, 1);
}

body {
    font-family: var(--font);
    font-weight: normal;
    font-style: normal;
    color: var(--gray);
    overflow-x: hidden;
    background-color: #08131C;
}

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

header {
    position: relative;
    z-index: 50;
}

section {
    text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--white);
    margin: 0px;
}

.align-img {
    justify-content: flex-start !important;
}

a {
    font-family: 'Cabin', sans-serif;
    font-weight: 600;
}

.content-light {
    font-family: 'Montserrat', sans-serif;
    font-weight: 100;
}

h1 {
    font-family: 'Bebas Neue', sans-serif;
    font-size: 70px;
}

h2 {
    font-family: 'Cabin', sans-serif;
    font-weight: 700;
    font-size: 32px;
}

h3 {
    font-size: 28px;
}

h4 {
    font-size: 22px;
}

h5 {
    font-size: 18px;
}

h6 {
    font-size: 16px;
}

/*===========================
  End Default CSS 
===========================*/


/*======================================
	Start Header CSS
========================================*/
.header {
    width: 100%;
    background: transparent;
    position: absolute;
    left: 0;
    top: 0;
}

.header-padding {
    padding: 0px 80px;
}

/*===== SOCIAL LINKS =====*/
.header-socials {
    position: absolute;
    z-index: 50;
    top: 30%;
    left: 80px;
}

.header-socials ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.header-socials li a {
    font-size: 40px;
    color: var(--white);
    opacity: 0.5;
    -webkit-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s;
}

.header-socials li a:hover {
    font-size: 45px;
    color: var(--green);
    background: var(--gradient-radial);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    opacity: 1;
}

/*===== STICKY STYLE =====*/
.sticky {
    position: fixed;
    z-index: 99;
    -webkit-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s;
    backdrop-filter: blur(10px);
    top: 0;
}

.sticky .navbar .navbar-nav .nav-item a {
    padding: 15px 0px;
}

.navbar-area.sticky {
    position: fixed;
    z-index: 99;
    -webkit-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s;
    padding: 0px 0;
}

.sticky .navbar .navbar-nav .nav-item a.active {
    text-decoration: underline;
}

.sticky .navbar .navbar-nav .nav-item a {
    color: var(--white);
}

.sticky .navbar .navbar-nav .nav-item a:hover {
    color: var(--green);
}

.sticky .navbar .navbar-nav .nav-item .sub-menu a.active {
    color: var(--white);
}

.sticky .navbar .mobile-menu-btn .toggler-icon {
    background: var(--white);
}

/*===== NAVBAR =====*/

.navbar {
    padding: 0;
    position: relative;
    transition: all 0.3s ease-out 0s;
    -webkit-transition: all 0.3s ease-out 0s;
}

.navbar-area {
    width: 100%;
    z-index: 99;
    -webkit-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s;
    padding: 0;
}

.navbar-divider {
    width: 40px;
    height: 1px;
    background-color: #eee;
    position: relative;
    top: 50%;
    opacity: 0.5;
}

.header .navbar-brand img {
    width: 200px;
}

.header .navbar .navbar-nav .nav-item a.active {
    text-decoration: underline;
}

.navbar-expand-lg .navbar-nav {
    margin: 0;
    margin-left: auto !important;
    margin-right: auto !important;
}

.navbar-brand {
    padding-left: 0;
    border-radius: 0;
}

.navbar-nav .nav-item {
    z-index: 1;
    position: relative;
    padding: 0px 10px;
}

.navbar-nav .nav-item:last-child {
    margin-right: 0 !important;
}

.navbar-nav .nav-item:hover a {
    color: var(--green);
}

.navbar-nav .nav-item a {
    font-size: 18px;
    color: var(--white);
    -webkit-transition: all 0.3s ease-out 0s;
    transition: all 0.3s ease-out 0s;
    position: relative;
    padding: 35px 0;
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    font-weight: 300;
    position: relative;
    text-decoration: none;
}
/* ... */

